vemo-app/main/default/objects/Fee__c/fields/DateAssessed__c.field-meta.xml
<CustomField>
    <fullName>DateAssessed__c</fullName>
    <inlineHelpText>The date the fee was assessed.</inlineHelpText>
    <label>Date Assessed</label>
    <type>Date</type>
</CustomField>