vemo-app/main/default/objects/Fee__c/fields/DateCleared__c.field-meta.xml
<CustomField>
    <fullName>DateCleared__c</fullName>
    <inlineHelpText>The date the fee's payment cleared.</inlineHelpText>
    <label>Date Cleared</label>
    <type>Date</type>
</CustomField>