vemo-app/main/default/objects/Fee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Unpaid, Paid, or Cancelled.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FeeStatus</valueSetName>
    </valueSet>
</CustomField>